--- a/Group3_Game_3_Gin_Rummy.ipynb
+++ b/Group3_Game_3_Gin_Rummy.ipynb
@@ -18,7 +18,7 @@
       "outputs": [],
       "source": [
         "#Update your token\n",
-        "STUDENT_TOKEN = 'MANUEL SAN ROMÁN GARCÍA'"
+        "STUDENT_TOKEN = 'Joaquin Casasus'"
       ]
     },
     {
