--- a/Group3_Game_1_Connect4.ipynb
+++ b/Group3_Game_1_Connect4.ipynb
@@ -27,7 +27,7 @@
       "cell_type": "code",
       "source": [
         "#Update your token\n",
-        "STUDENT_TOKEN = 'GROUP 3'"
+        "STUDENT_TOKEN = 'Joaquin Casasus'"
       ],
       "metadata": {
         "id": "jMHiHG2lEUJo"
